Archive2/de/484d3672d35d8e/output
+ clang++ -std=c++11 -O0 -Wall main.cpp
main.cpp:19:29: error: member reference base type 'long' is not a structure or union
    auto msecs    = duration.total_milliseconds();
                    ~~~~~~~~^~~~~~~~~~~~~~~~~~~
1 error generated.
